# libvirtualhid

./: .gitignore  .gitmodules  .sonarcloud.properties  404.html  AGENTS.md  CMakeLists.txt  README.md  index.html  package-lock.cmake  sonar-project.properties  staticman.yml
.github/workflows/: ci.yml
.run/: docs.run.xml
LICENSES/: README.md
assets/data/: searchcorpus.json
cmake/: build_version.cmake  libvirtualhid-config.cmake.in
cmake/packaging/: common.cmake  windows.cmake  windows_wix.cmake
cmake/packaging/wix_resources/: libvirtualhid-driver-installer-patch.xml  libvirtualhid-driver-installer.wxs  patch.xml
docs/: Doxyfile  development.md  platform-support.md  store-review-validation.md  streaming-host-integration.md  todo.md  usage.md  windows-driver.md
examples/: CMakeLists.txt  gamepad_adapter.cpp  keyboard_mouse_adapter.cpp  linux_discovery_probe.cpp  sunshine_gamepad_adapter.cpp  sunshine_keyboard_mouse_adapter.cpp
gh-pages-template/: _config.yml  index.html
gh-pages-template/_data/: features.yml
include/libvirtualhid/: libvirtualhid.hpp  profiles.hpp  report.hpp  runtime.hpp  types.hpp
scripts/windows/: install-driver.ps1  libvirtualhid-driver-common.ps1  sign-driver-package.ps1  test-browser-gamepad.ps1  test-installed-driver.ps1  uninstall-driver.ps1
src/: CMakeLists.txt
src/core/: backend.cpp  backend.hpp  gamepad_adapter.cpp  profiles.cpp  report.cpp  runtime.cpp  types.cpp
src/include/libvirtualhid/: gamepad_adapter.hpp  libvirtualhid.hpp  profiles.hpp  report.hpp  runtime.hpp  types.hpp
src/platform/: unsupported_backend.cpp
src/platform/linux/: uhid_backend.cpp  uhid_backend_test_hooks.hpp
src/platform/macos/: macos_backend.cpp
src/platform/windows/: control_protocol.hpp  keylayout.hpp  windows_backend.cpp  windows_backend_test_hooks.hpp
src/platform/windows/driver/: CMakeLists.txt  libvirtualhid.inf.in  libvirtualhid_umdf.cpp
src/platform/windows/shared/: generic_pid_protocol.hpp  generic_pid_rumble.hpp  lvh_windows_protocol.h  playstation_feature_protocol.hpp  switch_pro_protocol.hpp  windows_device_identity.hpp
src/shared/: playstation_feature_reports.hpp
tags/: index.html
tests/: CMakeLists.txt
tests/fixtures/: fixtures.cpp  linux_backend_test_hooks.cpp  macos_backend_test_hooks.cpp  windows_backend_test_hooks.cpp
tests/fixtures/include/fixtures/: fixtures.hpp  linux_backend_test_hooks.hpp  macos_backend_test_hooks.hpp  windows_backend_test_hooks.hpp
tests/unit/: test_gamepad_adapter.cpp  test_gamepad_lifecycle.cpp  test_linux_backend.cpp  test_linux_consumers.cpp  test_linux_discovery.cpp  test_macos_backend.cpp  test_profiles.cpp  test_report.cpp  test_runtime.cpp  test_sunshine_adapter.cpp  test_virtualhid_control_model.cpp  test_windows_backend.cpp  test_windows_consumers.cpp  test_windows_driver_protocol.cpp  test_windows_protocol.cpp
tools/: CMakeLists.txt  virtualhid_control.cpp  virtualhid_control_model.cpp  virtualhid_control_model.hpp
tools/windows/: resource.h  virtualhid_control.rc
